@@ -28,7 +28,7 @@
 @HEADER	HTAGS,9,May 2002,GNU Project
 @NAME	htags - generate hypertext from source code.
 @SYNOPSIS
-	@name{htags} [-a][-c][-f][-F][-m][-n][-o][-s][-v][-w][-d @arg{dir}][-S @arg{dir}][-t @arg{title}][@arg{dir}]
+	@name{htags} [-a][-c][-f][-F][-i][-m][-n][-o][-s][-v][-w][-d @arg{dir}][-S @arg{dir}][-t @arg{title}][@arg{dir}]
 @DESCRIPTION
 	@name{Htags} makes hypertext from C, C++, Yacc and Java source code.
 
@@ -60,6 +60,9 @@
 		You need to set up an HTTP server for this.
 	@item{@option{-F}, @option{--frame}}
 		Use frame for each part of the contents.
+	@item{@option{-i}, @option{--index}}
+		Make @file{INDEX} file. You can read the URL of specified
+		object name using @xref{btreeop,1}. See the example below.
 	@item{@option{--gtags}}
 		Execute @xref{gtags,1} before creating hypertext.
 	@item{@option{--gtagsconf} @arg{file}}
@@ -94,6 +97,12 @@
 	# gtags -v
 	# htags -fFnvat 'Welcom to FreeBSD kernel source tour!'
 	% lynx HTML/index.html
+
+	% htags -v --gtags
+	% btreeop -K main HTML/INDEX
+	main D/348.html
+	% lynx HTML/D/348.html
+
 @FILES
 	@begin_itemize
 	@item{@file{GTAGS}}
